lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:4: error: not found: value p
	p = new Point(0,0);
        ^Lander:5: error: not found: value p
	p.x();
        ^Lander:13: error: type mismatch;
 found   : ((Double, Double), (Double, Double))
 required: lessons.lander.universe.Segment
	return  ((0.1, 5.1),(2.1,5.7))
                ^